# file-organizer

./: .gitignore  Cargo.toml  LICENSE  README.md  demo_commands.md  demo_setup.sh
src/: cli.rs  commands.rs  confirmation.rs  logger.rs  main.rs  todo.txt  volumes.rs
src/commands/: arguments.rs  clean.rs  display.rs  find.rs  sort.rs
src/commands/arguments/: find_arguments.rs
src/commands/find/: file_list.rs  filtering.rs  printer.rs
src/commands/find/filtering/: extractors.rs  filters.rs
src/commands/sort/: file_action.rs  sort_by.rs  sort_directory.rs  sorters.rs  transfer_files.rs
tests/filtering/ext_rs/: code.rs
tests/filtering/ext_txt/: document.txt
tests/filtering/size_1024/: test_file.txt
tests/filtering/size_512/: small_file.txt
tests/sorters/sort_by_size/: star_wars_lore_50kb.txt  warhammer40k_lore_100kb.txt
